--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,7 @@ body {
 
 form {
     padding: 5px 20px;
+   
 }
 
 
@@ -521,6 +522,7 @@ form {
     height: 93vh;
     border: 1px solid #2C3965;
     color: fff;
+   
 }
 
 .heading {
@@ -545,19 +547,21 @@ input {
     height: 45px;
     border: 1px solid #2C3965;
     outline: none;
+    padding: 5px 20px;
+    border-radius: 5px;
 }
-
-
 
 
 textarea {
     width: 100%;
     height: 100px;
     margin-top: 10px;
+    border-radius: 5px;
 }
 
 ::placeholder {
-    padding: 10px;
+    padding: 10px 20px;
+    
 }
 
 
@@ -781,6 +785,7 @@ textarea {
         width: 100%;
         margin: 15px auto;
         height: 45px;
+      
     }
 
     textarea {
