--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ p {
 
 .image {
     position: fixed;
-    top: 50px;
+    top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -359,12 +359,11 @@ p {
 
 .blue-bg {
     position: fixed;
-    top: 230px;
+    top: 190px;
     left: 5px;
     background-color: #2C3965;
     color: #ccc;
     padding: 15px 25px;
-
     width: 200px;
     border-radius: 15px;
     overflow-y: auto;
@@ -545,6 +544,8 @@ input {
     height: 45px;
     border: 1px solid #2C3965;
     outline: none;
+    padding: 5px 20px;
+    border-radius: 5px;
 }
 
 
@@ -554,10 +555,12 @@ textarea {
     width: 100%;
     height: 100px;
     margin-top: 10px;
+    border-radius: 5px;
+    padding: 10px 20px;
 }
 
 ::placeholder {
-    padding: 10px;
+    padding: 10px 20px;
 }
 
 
@@ -573,7 +576,7 @@ textarea {
     align-self: center;
     margin-left: 30%;
     margin-right: 30%;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 .hirebtn:hover {
@@ -781,6 +784,7 @@ textarea {
         width: 100%;
         margin: 15px auto;
         height: 45px;
+      
     }
 
     textarea {
